# PlaywrightScraper

./: .gitignore  .replit  README.md  api_transport.py  db.py  db_core.py  debug_BMaster_F57.xlsx  debug_BMaster_F57_output _ideal_correct2.xlsx  debug_BMaster_F57_output.xlsx  debug_Franchise_57.xlsx  gemini.md  notif.py  package-lock.json  package.json  pyproject.toml  reconcile_course_titles.py  replit.nix  run_full_pipeline.bat  run_pipeline_to_spreadsheet.bat  scraper_internal_guide.md  setup_odbc.sh  setup_odbc_build.sh  tailwind.config.cjs
.github/workflows/: ci.yml  grade-db-windows.yml
PlaywrightScraper/: scraper_internal_guide.md
PlaywrightScraper/config/: studentsOGLOL.toml
PlaywrightScraper/scraper/: runner.py
PlaywrightScraper/utils/: captcha_guard.py
api/: Cargo.toml
api/migrations/: 001_boundary_tables.sql  002_worker_result_idempotency.sql  003_worker_job_leases.sql  004_dashboard_replay_nonces.sql  005_alternate_credentials_encryption.sql  006_enforce_no_plaintext_alternate_credentials.sql  007_target_worker_jobs.sql
api/src/: api_keys.rs  auth.rs  config.rs  credentials.rs  crm.rs  error.rs  lib.rs  main.rs  models.rs  queries.rs  rate_limit.rs  routes.rs  state.rs
api/testdata/: dashboard_hmac_vectors.json
api/tests/: targeted_jobs_postgres.rs  targeted_routes_postgres.rs
batches/: _bootstrap.bat  pipeline_all_franchises.bat  pipeline_franchise.bat  pipeline_franchise_06.bat  pipeline_franchise_08.bat  pipeline_franchise_11.bat  pipeline_franchise_15.bat  pipeline_franchise_16.bat  pipeline_franchise_19.bat  pipeline_franchise_49.bat  pipeline_franchise_57.bat  pipeline_franchise_60.bat  pipeline_franchise_74.bat  pipeline_franchise_87.bat  update_students_all.bat
config/: students.db-shm  students.db-wal
config/dbCreate/: create_db.py  dbdiagram.dbml  debug_schema.py  export_dbml.py  students.db  (+4 more)
frontend/: clean.mjs  prepare-dashboard.mjs
gps_trace/: trace.network  trace.stacks  trace.trace
grade_db/: Cargo.toml  README.md
grade_db/sql/: 000_inspect_boundary.sql  001_runner_boundary.sql
grade_db/sql/operations/: clear_runner_config.sql  set_runner_config.sql
grade_db/src/: cli.rs  config.rs  crm.rs  error.rs  lib.rs  main.rs  models.rs  neon.rs  service.rs
grade_db/tests/: cli_contracts.rs  contracts.rs  crm_contracts.rs  protocol.rs  service.rs  sql_contracts.rs
odbc_driver/: libcom_err.so.3  libcrypto.so.1.1  libgcc_s.so.1  libgssapi_krb5.so.2  libk5crypto.so.3  libkeyutils.so.1  libkrb5.so.3  libkrb5support.so.0  libmsodbcsql-17.7.so.1.1  libssl.so.1.1  libstdc++.so.6
scraper/: agenda.py  api_client.py  db_cli.py  diagnostics.py  info.py  notif.py  post_processing.py  runner.py  safe_logging.py  scheduler_client.py  to_excel.py  verify_bad_logins.py
scripts/: check_python_boundaries.py  operator_credentials.py  verify_grade_api.py  windows_pipeline.py
tests/: conftest.py  test_agenda_api_only.py  test_agenda_grade_db_boundary.py  test_allenisd_portal.py  test_api_clients.py  test_api_transport.py  test_ci_config.py  test_crm_auth_routes.py  test_dashboard_data.py  test_db_cli.py  test_db_conn.py  test_db_core_env.py  test_deploy_artifacts.py  test_ext_jobs_grade_db.py  test_franchise19_loginmaster_vs_db.py  test_frontend_security.py  test_grade_db_sql.py  test_grade_db_windows_ci.py  test_homeaccess.py  test_insert_grades.py  test_logging_config.py  test_microsoft_benjamin_franklin.py  test_migrations.py  test_notif.py  test_operator_cli.py  test_portal_workflow.py  test_python_boundaries.py  test_read_only_dashboard_frontend.py  test_read_only_dashboard_routes.py  test_replit_deployment.py  test_report_models.py  test_retired_sheets.py  test_runner_grade_db_boundary.py  test_runner_worker_api.py  test_safe_logging.py  test_scheduler_client.py  test_secret_redaction.py  test_sqlalchemy_migration_regressions.py  test_template_javascript.py  test_verify_grade_api.py  (+2 more)
ui/: api_client.py  app.py  auth.py  controller.py  controllers.py  dashboard_data.py  ext_jobs.py  main.py  nginx.conf  report_models.py  routes.py  start.sh  wsgi.py
utils/: captcha_guard.py  ccsd_parent_gpt.py  ratelimiter.py
(+123 files in other folders)
