[project]
name = "playwrightscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "beautifulsoup4>=4.13.4",
    "cryptography>=46.0.5",
    "dbml-sqlite>=0.3.3",
    "dotenv>=0.9.9",
    "flask[async]>=3.1.3",
    "flask-session>=0.8.0",
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "openai>=1.98.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "playwright>=1.53.0",
    "psycopg2-binary>=2.9.10",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.42",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]