[project]
name = "playwrightscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.14"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "idna>=3.15",
    "python-dotenv>=1.2.2",
    "flask[async]>=3.1.3",
    "openai>=1.98.0",
    "playwright>=1.53.0",
    "requests>=2.33.0",
    "soupsieve>=2.8.4",
    "tenacity>=9.1.2",
    "urllib3>=2.7.0",
    "gunicorn>=25.2.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "pygments>=2.20.0",
    "pytest>=9.0.3",
    "ruff>=0.12.0",
]
[tool.ty.environment]
python = ".pythonlibs"
