[project]
name = "playwrightscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.14"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "flask[async]>=3.1.3",
    "playwright>=1.53.0",
    "psycopg[binary]>=3.2",
    "pyodbc>=5.2.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "tenacity>=9.1.2",
    "greenlet>=3.2.3",
    "gunicorn>=25.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
[tool.ty.environment]
python = ".pythonlibs"
