[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
async-trait = "0.1.89"
axum = { version = "0.7.9", features = ["macros", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
bytes = "1.10.1"
base64 = "0.22.1"
http-body-util = "0.1.3"
hmac = "0.12.1"
hex = "0.4.3"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "uuid", "chrono", "json"] }
subtle = "2.6.1"
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "rustls", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["compat"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
url = "2.5.4"
zeroize = { version = "1.8.1", features = ["derive"] }

[[bin]]
name = "api"
path = "src/main.rs"
