[package]
name = "grade-db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
thiserror = "2.0"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono"] }
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "1.17", features = ["v4", "v5", "serde"] }
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "grade-db"
path = "src/main.rs"
